// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`codegen/dog create validators: generated validators at "generated/validators/model.ts" 1`] = `
"/*
Codegen

this file was automatically generated and should not be edited
*/
// tslint:disable
/* eslint-disable */

import {
  GeneratedValidation,
  ValidationConfig,
  ValidationError,
  ValidationException,
  Data,
  UserContext,
  getConfig,
  mergeDeep,
  typeValidator,
  minLengthValidator,
  maxLengthValidator,
  minValidator,
  maxValidator,
  integerValidator,
  lessThanValidator
} from 'ts-generate-validator';

import { userValidator } from './nestedModel.model';

import { Dog } from './../../model';

export const dogValidator: GeneratedValidation = <D extends Data = typeof Dog, C extends UserContext = UserContext>(
  data: D,
  configArg?: ValidationConfig,
  context?: C
) => {
  const config = <ValidationConfig>mergeDeep({}, getConfig(), configArg ?? {});
  const errors: ValidationError[] = [];

  try {
    typeValidator({
      property: data?.name,
      propertyName: 'name',
      data,
      config,
      context,

      type: 'string'
    });

    minLengthValidator({
      property: data?.name,
      propertyName: 'name',
      data,
      config,
      context,

      threshold: 5
    });

    maxLengthValidator({
      property: data?.name,
      propertyName: 'name',
      data,
      config,
      context,

      threshold: 20
    });

    typeValidator({
      property: data?.age,
      propertyName: 'age',
      data,
      config,
      context,

      type: 'number'
    });

    minValidator({
      property: data?.age,
      propertyName: 'age',
      data,
      config,
      context,

      threshold: 2,

      customMessage: 'only dogs over 2 years old are accepted'
    });

    maxValidator({
      property: data?.age,
      propertyName: 'age',
      data,
      config,
      context,

      threshold: 16,

      customMessage: \\"dogs can't live that long\\"
    });

    integerValidator({
      property: data?.age,
      propertyName: 'age',
      data,
      config,
      context,

      customMessage: 'age must be an integer value'
    });

    typeValidator({
      property: data?.ownedYears,
      propertyName: 'ownedYears',
      data,
      config,
      context,

      type: 'number'
    });

    lessThanValidator({
      property: data?.ownedYears,
      propertyName: 'ownedYears',
      data,
      config,
      context,

      targetPropertyName: 'age',

      customMessage: \\"dog can't be owned by anyone longer than his age\\"
    });

    typeValidator({
      property: data?.owner,
      propertyName: 'owner',
      data,
      config,
      context,

      typeDescription: userValidator,

      type: 'nested'
    });
  } catch (err) {
    if (!(err instanceof ValidationError)) {
      throw err;
    }

    errors.push(err);

    if (config.stopAtFirstError) {
      throw new ValidationException(errors);
    }
  }

  if (errors.length) {
    throw new ValidationException(errors);
  }
};
"
`;

exports[`codegen/dog create validators: generated validators at "generated/validators/nestedModel.model.ts" 1`] = `
"/*
Codegen

this file was automatically generated and should not be edited
*/
// tslint:disable
/* eslint-disable */

import {
  GeneratedValidation,
  ValidationConfig,
  ValidationError,
  ValidationException,
  Data,
  UserContext,
  getConfig,
  mergeDeep,
  typeValidator
} from 'ts-generate-validator';

import { User } from './../../nestedModel/model';

export const userValidator: GeneratedValidation = <D extends Data = typeof User, C extends UserContext = UserContext>(
  data: D,
  configArg?: ValidationConfig,
  context?: C
) => {
  const config = <ValidationConfig>mergeDeep({}, getConfig(), configArg ?? {});
  const errors: ValidationError[] = [];

  try {
    typeValidator({
      property: data?.name,
      propertyName: 'name',
      data,
      config,
      context,

      type: 'string'
    });

    typeValidator({
      property: data?.surname,
      propertyName: 'surname',
      data,
      config,
      context,

      type: 'string'
    });
  } catch (err) {
    if (!(err instanceof ValidationError)) {
      throw err;
    }

    errors.push(err);

    if (config.stopAtFirstError) {
      throw new ValidationException(errors);
    }
  }

  if (errors.length) {
    throw new ValidationException(errors);
  }
};
"
`;

exports[`codegen/dog parse & prepare: data for render 1`] = `
Array [
  Object {
    "fileName": "model.ts",
    "filePath": "generated/validators",
    "imports": Array [
      Object {
        "clauses": "GeneratedValidation, ValidationConfig, ValidationError, ValidationException, Data, UserContext, getConfig, mergeDeep, typeValidator, minLengthValidator, maxLengthValidator, minValidator, maxValidator, integerValidator, lessThanValidator",
        "path": "ts-generate-validator",
      },
      Object {
        "clauses": "userValidator",
        "path": "./nestedModel.model",
      },
      Object {
        "clauses": "Dog",
        "path": "./../../model",
      },
    ],
    "validations": Array [
      Object {
        "async": false,
        "items": Array [
          Object {
            "propertyName": "name",
            "validatorName": "typeValidator",
            "validatorPayload": Array [
              Object {
                "property": "type",
                "type": "string",
                "value": "string",
              },
            ],
          },
          Object {
            "async": false,
            "propertyName": "name",
            "validatorName": "minLengthValidator",
            "validatorPayload": Array [
              Object {
                "property": "threshold",
                "type": "",
                "value": "5",
              },
            ],
          },
          Object {
            "async": false,
            "propertyName": "name",
            "validatorName": "maxLengthValidator",
            "validatorPayload": Array [
              Object {
                "property": "threshold",
                "type": "",
                "value": "20",
              },
            ],
          },
          Object {
            "propertyName": "age",
            "validatorName": "typeValidator",
            "validatorPayload": Array [
              Object {
                "property": "type",
                "type": "string",
                "value": "number",
              },
            ],
          },
          Object {
            "async": false,
            "propertyName": "age",
            "validatorName": "minValidator",
            "validatorPayload": Array [
              Object {
                "property": "threshold",
                "type": "",
                "value": "2",
              },
              Object {
                "property": "customMessage",
                "type": "string",
                "value": "only dogs over 2 years old are accepted",
              },
            ],
          },
          Object {
            "async": false,
            "propertyName": "age",
            "validatorName": "maxValidator",
            "validatorPayload": Array [
              Object {
                "property": "threshold",
                "type": "",
                "value": "16",
              },
              Object {
                "property": "customMessage",
                "type": "string",
                "value": "dogs can\\\\'t live that long",
              },
            ],
          },
          Object {
            "async": false,
            "propertyName": "age",
            "validatorName": "integerValidator",
            "validatorPayload": Array [
              Object {
                "property": "customMessage",
                "type": "string",
                "value": "age must be an integer value",
              },
            ],
          },
          Object {
            "propertyName": "ownedYears",
            "validatorName": "typeValidator",
            "validatorPayload": Array [
              Object {
                "property": "type",
                "type": "string",
                "value": "number",
              },
            ],
          },
          Object {
            "async": false,
            "propertyName": "ownedYears",
            "validatorName": "lessThanValidator",
            "validatorPayload": Array [
              Object {
                "property": "targetPropertyName",
                "type": "string",
                "value": "age",
              },
              Object {
                "property": "customMessage",
                "type": "string",
                "value": "dog can\\\\'t be owned by anyone longer than his age",
              },
            ],
          },
          Object {
            "propertyName": "owner",
            "validatorName": "typeValidator",
            "validatorPayload": Array [
              Object {
                "property": "typeDescription",
                "type": "object",
                "value": "userValidator",
              },
              Object {
                "property": "type",
                "type": "string",
                "value": "nested",
              },
            ],
          },
        ],
        "modelClassName": "Dog",
        "name": "dogValidator",
      },
    ],
  },
  Object {
    "fileName": "nestedModel.model.ts",
    "filePath": "generated/validators",
    "imports": Array [
      Object {
        "clauses": "GeneratedValidation, ValidationConfig, ValidationError, ValidationException, Data, UserContext, getConfig, mergeDeep, typeValidator",
        "path": "ts-generate-validator",
      },
      Object {
        "clauses": "User",
        "path": "./../../nestedModel/model",
      },
    ],
    "validations": Array [
      Object {
        "async": false,
        "items": Array [
          Object {
            "propertyName": "name",
            "validatorName": "typeValidator",
            "validatorPayload": Array [
              Object {
                "property": "type",
                "type": "string",
                "value": "string",
              },
            ],
          },
          Object {
            "propertyName": "surname",
            "validatorName": "typeValidator",
            "validatorPayload": Array [
              Object {
                "property": "type",
                "type": "string",
                "value": "string",
              },
            ],
          },
        ],
        "modelClassName": "User",
        "name": "userValidator",
      },
    ],
  },
]
`;

exports[`codegen/dog parse & prepare: parsed metadata 1`] = `
Array [
  Object {
    "classes": Array [
      Object {
        "decorators": Array [
          Object {
            "arguments": Array [],
            "name": "Validation",
          },
        ],
        "fields": Array [
          Object {
            "decorators": Array [
              Object {
                "arguments": Array [
                  5,
                ],
                "name": "MinLengthValidation",
              },
              Object {
                "arguments": Array [
                  20,
                ],
                "name": "MaxLengthValidation",
              },
            ],
            "name": "name",
            "optional": false,
            "type": Object {
              "name": "string",
              "validationType": "string",
            },
          },
          Object {
            "decorators": Array [
              Object {
                "arguments": Array [
                  2,
                  "only dogs over 2 years old are accepted",
                ],
                "name": "MinValidation",
              },
              Object {
                "arguments": Array [
                  16,
                  "dogs can't live that long",
                ],
                "name": "MaxValidation",
              },
              Object {
                "arguments": Array [
                  "age must be an integer value",
                ],
                "name": "IntegerValidation",
              },
            ],
            "name": "age",
            "optional": false,
            "type": Object {
              "name": "number",
              "validationType": "number",
            },
          },
          Object {
            "decorators": Array [
              Object {
                "arguments": Array [
                  "age",
                  "dog can't be owned by anyone longer than his age",
                ],
                "name": "LessThanValidation",
              },
            ],
            "name": "ownedYears",
            "optional": false,
            "type": Object {
              "name": "number",
              "validationType": "number",
            },
          },
          Object {
            "decorators": Array [],
            "name": "owner",
            "optional": true,
            "type": Object {
              "name": "User",
              "referencePath": "nestedModel/model.ts",
              "validationType": "nested",
            },
          },
        ],
        "name": "Dog",
      },
    ],
    "name": "model.ts",
  },
  Object {
    "classes": Array [
      Object {
        "decorators": Array [
          Object {
            "arguments": Array [],
            "name": "Validation",
          },
        ],
        "fields": Array [
          Object {
            "decorators": Array [],
            "name": "name",
            "optional": false,
            "type": Object {
              "name": "string",
              "validationType": "string",
            },
          },
          Object {
            "decorators": Array [],
            "name": "surname",
            "optional": false,
            "type": Object {
              "name": "string",
              "validationType": "string",
            },
          },
        ],
        "name": "User",
      },
    ],
    "name": "nestedModel/model.ts",
  },
]
`;
